# l10n-brazil

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  l10n-brazil-odoo.code-workspace  requirements.txt  test-constraints.txt  test-requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  mcp-server-config.json
docs/: copilot-quick-reference.md  copilot-setup.md
l10n_br_account/: README.rst  __manifest__.py
l10n_br_account_due_list/: README.rst  __manifest__.py
l10n_br_account_nfe/: README.rst  __manifest__.py  hooks.py
l10n_br_account_payment_brcobranca/: README.rst  __manifest__.py
l10n_br_account_payment_order/: README.rst  __manifest__.py  constants.py
l10n_br_account_payment_pagarme/: README.rst  __init__.py  __manifest__.py
l10n_br_account_withholding/: README.rst  __manifest__.py
l10n_br_base/: README.rst  __manifest__.py
l10n_br_cnab_structure/: README.rst  __manifest__.py
l10n_br_cnpj_search/: README.rst  (+1 more)
stone_pagarme_payment/: README.md  __init__.py  __manifest__.py  pyproject.toml
stone_pagarme_payment/controllers/: __init__.py  main.py
stone_pagarme_payment/data/: payment_provider_data.xml
stone_pagarme_payment/models/: __init__.py  payment_provider.py  payment_transaction.py
stone_pagarme_payment/security/: ir.model.access.csv
stone_pagarme_payment/static/src/css/: stone_pagarme.css
stone_pagarme_payment/static/src/js/: stone_pagarme.js
stone_pagarme_payment/tests/: __init__.py  test_stone_pagarme_payment.py
stone_pagarme_payment/views/: payment_provider_views.xml
(+841 files in other folders)
