[build-system]
requires = ["setuptools>=40.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-addon-stone-pagarme-payment"
dynamic = ["version"]
description = "Stone/Pagar.me Payment Provider for Odoo"
readme = "README.md"
license = {text = "AGPL-3"}
authors = [
    {name = "KMEE", email = "dev@kmee.com.br"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Odoo",
]
dependencies = [
    "odoo>=16.0dev,<16.1dev",
    "requests",
]

[project.urls]
Homepage = "https://github.com/OCA/l10n-brazil"

[tool.setuptools.dynamic]
version = {attr = "setuptools_scm.get_version"}

[tool.setuptools.packages.find]
include = ["odoo*"]

[tool.setuptools_scm]
write_to = "stone_pagarme_payment/_version.py"